# apache-spark-examples

./: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  k8s-cleanup.sh  k8s-setup.sh  k8s-teardown.sh  makefile  pyproject.toml  spark-logs.sh  spark-submit.sh
bash-scripts/: spark-submit.sh  spark-ui.sh
documentation/: intro.md
documentation/apache-spark/: how-apache-spark-works.md  jobs-stages-tasks.md  resource-utilization.md  spark-executor-container-memory-allocation.md  transformations-and-actions.md
documentation/deployment/: deployment.md
src/: caching.py  demo.py  long-running-job.py  sample.py
