[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pawan Regoti <pawan.regoti@maersk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^4.1.1"
pytest = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
